# 2025-chess-bot-tournament

./: .gitignore  README.md  build_chessapi_ffi.py  chessapi.c  chessapi.h  example_bot.c  example_bot.py  pychessapi.py
src/: README.md
src/c/: README.md  bitboard.c  bitboard.h  chessapi.c  chessapi.h  example_bot.c
src/haskell/: README.md  chessbot.cabal  stack.yaml
src/haskell/src/: Main.hs
src/kotlin/: README.md
src/py/: README.md  build_chessapi_ffi.py  example_bot.py  pychessapi.py
src/rust/: Cargo.toml  README.md
src/rust/src/: main.rs
test/: README.md  chess_api_tester.cpp  gen_testdata.py
